Add stage timings in the PR filter
